Fix homepage image overflow issue on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Initial setup */
 
 html {
+  overflow-x: hidden;
   /* ROOT */
   box-sizing: border-box;
   font-size: 16px;
@@ -11,7 +12,7 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 /* Prevents autofill from changing color */
@@ -35,13 +36,18 @@ body {
 
 html,
 body {
-  width: 100%;
+  /* width: 100%; */
   /* height: 100%; */
 }
 
 main {
   /* display: flex;
     flex-direction: column; */
+}
+
+.main-wrapper {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .wrapper {
@@ -734,10 +740,20 @@ footer svg:hover path {
   min-width: 100px;
 }
 
+.background-container {
+  position: relative;
+  overflow: hidden;
+}
+
 .background {
   position: absolute;
   z-index: -2;
   object-fit: contain;
+  max-width: 100vw;
+  width: auto;
+  height: auto;
+  left: 0;
+  top: 0;
 }
 
 .contact__input {
